# pyExamples

./: .gitignore  README.md  bash.exe.stackdump  main.py  pyproject.toml
algo/: algo.py  locustfile.py  sort.py
algo/AI/: ai.py  tare.py
algo/leetcode/sort/: [sort]bubble.py  (+1 more)
algo/linear/: [array]merge.py  [chain]remote_elm.py
algo/other/: a.py  object.py
algo/sort/: [sort]quick.py  sort1.py
chat/: modelscope-download.py  modelscope.py
concurrent/: gevent_t.py  queue_t.py  threadpool.py
concurrent/Coroutine/: async_pattern.ipynb  coroutine1.py
concurrent/web+concurrent/: readme.md
concurrent/多进程_多线程/: readme.md
core/: args.py  basic.py  basic_collection.py  basic_elm.py  basic_iter.py  basic_ref.py  coroutine.py  decorator.py  function.py  main.py  main1.py  obj.py  obj1.py  partial_func.py  readme.md
fastapi/: example.py  main.py
flask/: main.py
flask/tutorial/: pyproject.toml
jinja2/: test.py
langchain/: langchain-base.py  langchian-model.py
llm-api/: openai_api.py  qwen-threadpool-1.py
myspace/: empty.py
nlp/: paddlenlp.py  text2vec.py
nlp/UIE/: paddlenlp.py
nlp/sbert/: readme.md  sbert.py  sbert1.py  sbert2.py  sbert5.py
nlp/tencent/: text2vec.py
orm/: db_init.py  ops.py
others/jinja2/: index.html
others/zhongruan/: 发票全生命周期管理.py  瑕疵票据识别.py
python/: readme.md  readme.txt
pytorch/: core.py
pytorch/第一章：张量的计算和操作/: test2.py  test3.py  test4.py
web/fastapi/: from_litellm.py
web/flask/: main.py
web/http/: http.py  http_test.py  insertTable.py  parseJson.py  readFile.py
zhongruan/: test.py  贸易背景合规检查.py  贸易背景智能匹配.py
(+6 files in other folders)
