[project]
name = "pyexamples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.1",
    "sqlalchemy>=2.0.41",
    "text2vec>=1.3.3",
]
